Executed notebooks to show output

--- a/3.interpret_models/log_reg_plate_3_3p_cp_renorm_fs_data/feature_importances/seperate_compartments.ipynb
+++ b/3.interpret_models/log_reg_plate_3_3p_cp_renorm_fs_data/feature_importances/seperate_compartments.ipynb
@@ -11,44 +11,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-16T00:11:03.008413Z",
+     "iopub.status.busy": "2023-06-16T00:11:03.008248Z",
+     "iopub.status.idle": "2023-06-16T00:11:03.016180Z",
+     "shell.execute_reply": "2023-06-16T00:11:03.015699Z"
+    },
     "jukit_cell_id": "SyZ3qa8iz3"
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'°°°\\n## Imports\\n°°°'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# %%--%%| <qGnYViiwRD|SyZ3qa8iz3>\n",
     "r\"\"\"°°°\n",
     "## Imports\n",
     "°°°\"\"\""
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "\n"
-    },
-    {
-     "output_type": "execute_result",
-     "execution_count": 1,
-     "data": {
-      "text/plain": "'°°°\\n## Imports\\n°°°'"
-     },
-     "metadata": {}
-    }
-   ],
-   "execution_count": 1
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-16T00:11:03.018171Z",
+     "iopub.status.busy": "2023-06-16T00:11:03.017811Z",
+     "iopub.status.idle": "2023-06-16T00:11:03.189770Z",
+     "shell.execute_reply": "2023-06-16T00:11:03.189388Z"
+    },
     "jukit_cell_id": "FKd1dIo45E"
    },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "import itertools"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,9 +70,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-16T00:11:03.191621Z",
+     "iopub.status.busy": "2023-06-16T00:11:03.191319Z",
+     "iopub.status.idle": "2023-06-16T00:11:03.193946Z",
+     "shell.execute_reply": "2023-06-16T00:11:03.193649Z"
+    },
     "jukit_cell_id": "zjh0SKYFgl"
    },
+   "outputs": [],
    "source": [
     "# Get the current working directory\n",
     "cwd = Path.cwd()\n",
@@ -81,9 +98,7 @@
     "# Check if a Git root directory was found\n",
     "if root_dir is None:\n",
     "    raise FileNotFoundError(\"No Git root directory found.\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,9 +111,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-16T00:11:03.195177Z",
+     "iopub.status.busy": "2023-06-16T00:11:03.194946Z",
+     "iopub.status.idle": "2023-06-16T00:11:03.196959Z",
+     "shell.execute_reply": "2023-06-16T00:11:03.196661Z"
+    },
     "jukit_cell_id": "W8zS6OpdNq"
    },
+   "outputs": [],
    "source": [
     "output_path = Path(\"data\")\n",
     "feature_file = \"feature_importances.tsv\"\n",
@@ -106,9 +129,7 @@
     "output_path.mkdir(\n",
     "    parents=True, exist_ok=True\n",
     ")  # Create the parent directories if they don't exist"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,14 +142,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-16T00:11:03.198135Z",
+     "iopub.status.busy": "2023-06-16T00:11:03.197934Z",
+     "iopub.status.idle": "2023-06-16T00:11:03.201181Z",
+     "shell.execute_reply": "2023-06-16T00:11:03.200858Z"
+    },
     "jukit_cell_id": "aYwhtTNAgx"
    },
+   "outputs": [],
    "source": [
     "feature_properties = pd.read_csv(output_path / feature_file, sep=\"\\t\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,9 +168,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-16T00:11:03.202453Z",
+     "iopub.status.busy": "2023-06-16T00:11:03.202238Z",
+     "iopub.status.idle": "2023-06-16T00:11:03.205620Z",
+     "shell.execute_reply": "2023-06-16T00:11:03.205309Z"
+    },
     "jukit_cell_id": "wSEsy3OWnz"
    },
+   "outputs": [],
    "source": [
     "# A map for comparments to channel\n",
     "compartment2channel = {\"actin\": \"RFP\", \"er\": \"GFP\", \"nucleus\": \"DAPI\"}\n",
@@ -153,9 +188,7 @@
     "    compartment: feature_properties[feature_properties[\"feature\"].str.contains(channel)]\n",
     "    for compartment, channel in compartment2channel.items()\n",
     "}"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,9 +201,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-16T00:11:03.206786Z",
+     "iopub.status.busy": "2023-06-16T00:11:03.206580Z",
+     "iopub.status.idle": "2023-06-16T00:11:03.212238Z",
+     "shell.execute_reply": "2023-06-16T00:11:03.211933Z"
+    },
     "jukit_cell_id": "CQscjFvYen"
    },
+   "outputs": [],
    "source": [
     "# Create a list of all possible comparment pairs\n",
     "pairs = list(itertools.combinations(compartment_data.keys(), 2))\n",
@@ -196,9 +237,7 @@
     "    # Remove any duplicate features already added to the other compartment dataframe\n",
     "    other_compartment = pd.concat([other_compartment, intersection], axis=0)\n",
     "    other_compartment = other_compartment.drop_duplicates(subset=\"feature\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -211,9 +250,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-16T00:11:03.213392Z",
+     "iopub.status.busy": "2023-06-16T00:11:03.213176Z",
+     "iopub.status.idle": "2023-06-16T00:11:03.217765Z",
+     "shell.execute_reply": "2023-06-16T00:11:03.217422Z"
+    },
     "jukit_cell_id": "iTJOXFvhuT"
    },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_5243/1152003864.py:13: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  compartment_data[compartment][\"compartment\"] = len(df) * [compartment]\n",
+      "/tmp/ipykernel_5243/1152003864.py:13: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  compartment_data[compartment][\"compartment\"] = len(df) * [compartment]\n"
+     ]
+    }
+   ],
    "source": [
     "# Remove features from each compartment dataframe if they are duplicates in other dataframes, or if the features only exist in the other_compartment dataframe\n",
     "compartment_data = {\n",
@@ -231,9 +297,7 @@
     "\n",
     "# Concatenate the rows of DataFrames to create the plot\n",
     "concatenated_df = pd.concat(compartment_data.values(), ignore_index=True)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -246,14 +310,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-16T00:11:03.218945Z",
+     "iopub.status.busy": "2023-06-16T00:11:03.218736Z",
+     "iopub.status.idle": "2023-06-16T00:11:03.222619Z",
+     "shell.execute_reply": "2023-06-16T00:11:03.222312Z"
+    },
     "jukit_cell_id": "NUwlraBlOz"
    },
+   "outputs": [],
    "source": [
     "concatenated_df.to_csv(output_path / \"feature_compartments.tsv\", sep=\"\\t\", index=False)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   }
  ],
  "metadata": {
@@ -262,6 +332,18 @@
    "display_name": "python",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
