Added Eriks suggestions

--- a/3.interpret_models/log_reg_plate_3_3p_cp_renorm_fs_data/feature_importances/calc.ipynb
+++ b/3.interpret_models/log_reg_plate_3_3p_cp_renorm_fs_data/feature_importances/calc.ipynb
@@ -23,10 +23,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:04.537877Z",
-     "iopub.status.busy": "2023-06-16T15:10:04.537671Z",
-     "iopub.status.idle": "2023-06-16T15:10:04.783665Z",
-     "shell.execute_reply": "2023-06-16T15:10:04.783363Z"
+     "iopub.execute_input": "2023-06-16T21:05:34.842919Z",
+     "iopub.status.busy": "2023-06-16T21:05:34.842570Z",
+     "iopub.status.idle": "2023-06-16T21:05:35.047587Z",
+     "shell.execute_reply": "2023-06-16T21:05:35.047169Z"
     },
     "jukit_cell_id": "FKd1dIo45E"
    },
@@ -53,10 +53,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:04.785251Z",
-     "iopub.status.busy": "2023-06-16T15:10:04.784951Z",
-     "iopub.status.idle": "2023-06-16T15:10:04.787471Z",
-     "shell.execute_reply": "2023-06-16T15:10:04.787218Z"
+     "iopub.execute_input": "2023-06-16T21:05:35.049154Z",
+     "iopub.status.busy": "2023-06-16T21:05:35.048870Z",
+     "iopub.status.idle": "2023-06-16T21:05:35.051508Z",
+     "shell.execute_reply": "2023-06-16T21:05:35.051178Z"
     },
     "jukit_cell_id": "zjh0SKYFgl"
    },
@@ -94,10 +94,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:04.788723Z",
-     "iopub.status.busy": "2023-06-16T15:10:04.788451Z",
-     "iopub.status.idle": "2023-06-16T15:10:04.790187Z",
-     "shell.execute_reply": "2023-06-16T15:10:04.789941Z"
+     "iopub.execute_input": "2023-06-16T21:05:35.052678Z",
+     "iopub.status.busy": "2023-06-16T21:05:35.052468Z",
+     "iopub.status.idle": "2023-06-16T21:05:35.054281Z",
+     "shell.execute_reply": "2023-06-16T21:05:35.053983Z"
     },
     "jukit_cell_id": "iw6Y70wdPs"
    },
@@ -120,10 +120,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:04.791330Z",
-     "iopub.status.busy": "2023-06-16T15:10:04.791136Z",
-     "iopub.status.idle": "2023-06-16T15:10:04.793051Z",
-     "shell.execute_reply": "2023-06-16T15:10:04.792738Z"
+     "iopub.execute_input": "2023-06-16T21:05:35.055435Z",
+     "iopub.status.busy": "2023-06-16T21:05:35.055234Z",
+     "iopub.status.idle": "2023-06-16T21:05:35.057185Z",
+     "shell.execute_reply": "2023-06-16T21:05:35.056893Z"
     },
     "jukit_cell_id": "EBc3nCzByb"
    },
@@ -134,14 +134,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "jukit_cell_id": "p29oQJPh2r"
+   },
+   "source": [
+    "## Specify paths"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:04.794333Z",
-     "iopub.status.busy": "2023-06-16T15:10:04.794130Z",
-     "iopub.status.idle": "2023-06-16T15:10:04.796082Z",
-     "shell.execute_reply": "2023-06-16T15:10:04.795837Z"
+     "iopub.execute_input": "2023-06-16T21:05:35.058352Z",
+     "iopub.status.busy": "2023-06-16T21:05:35.058153Z",
+     "iopub.status.idle": "2023-06-16T21:05:35.060515Z",
+     "shell.execute_reply": "2023-06-16T21:05:35.060195Z"
     },
     "jukit_cell_id": "SrlRn60Pna"
    },
@@ -153,7 +162,16 @@
     "if not data_path.exists():\n",
     "    data_path.mkdir()\n",
     "\n",
-    "data_path = data_path / filename"
+    "data_path = data_path / filename\n",
+    "\n",
+    "\n",
+    "models_path = Path(\n",
+    "    f\"{root_dir}/1.train_models/log_reg_plate_3_3p_cp_renorm_fs_data/data\"\n",
+    ")\n",
+    "\n",
+    "lr_output_path = models_path / \"lr_model.joblib\"\n",
+    "testdf_output_path = models_path / \"testdf.joblib\"\n",
+    "le_output_path = models_path / \"label_encoder.joblib\""
    ]
   },
   {
@@ -170,28 +188,25 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:04.797314Z",
-     "iopub.status.busy": "2023-06-16T15:10:04.797069Z",
-     "iopub.status.idle": "2023-06-16T15:10:05.079695Z",
-     "shell.execute_reply": "2023-06-16T15:10:05.079335Z"
+     "iopub.execute_input": "2023-06-16T21:05:35.061742Z",
+     "iopub.status.busy": "2023-06-16T21:05:35.061542Z",
+     "iopub.status.idle": "2023-06-16T21:05:35.238923Z",
+     "shell.execute_reply": "2023-06-16T21:05:35.238530Z"
     },
-    "jukit_cell_id": "xGf9mf7lUA"
+    "jukit_cell_id": "9tHrPDLV5e"
    },
    "outputs": [],
    "source": [
-    "models_path = Path(\n",
-    "    f\"{root_dir}/1.train_models/log_reg_plate_3_3p_cp_renorm_fs_data/data\"\n",
-    ")\n",
-    "lr = load(models_path / \"lr_model.joblib\")"
+    "lr = load(lr_output_path)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "jukit_cell_id": "zrPcdDGOjB"
+    "jukit_cell_id": "dRdqF7jwDe"
    },
    "source": [
-    "## Save Data"
+    "## Load data"
    ]
   },
   {
@@ -199,17 +214,17 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:05.081307Z",
-     "iopub.status.busy": "2023-06-16T15:10:05.081003Z",
-     "iopub.status.idle": "2023-06-16T15:10:05.129716Z",
-     "shell.execute_reply": "2023-06-16T15:10:05.129398Z"
+     "iopub.execute_input": "2023-06-16T21:05:35.240309Z",
+     "iopub.status.busy": "2023-06-16T21:05:35.240075Z",
+     "iopub.status.idle": "2023-06-16T21:05:35.267734Z",
+     "shell.execute_reply": "2023-06-16T21:05:35.267360Z"
     },
-    "jukit_cell_id": "sgPsexjO8l"
+    "jukit_cell_id": "yETQRW2Cmj"
    },
    "outputs": [],
    "source": [
-    "testdf = load(models_path / \"testdf.joblib\")\n",
-    "le = load(models_path / \"label_encoder.joblib\")"
+    "testdf = load(testdf_output_path)\n",
+    "le = load(le_output_path)"
    ]
   },
   {
@@ -226,10 +241,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:05.131631Z",
-     "iopub.status.busy": "2023-06-16T15:10:05.131312Z",
-     "iopub.status.idle": "2023-06-16T15:10:05.145446Z",
-     "shell.execute_reply": "2023-06-16T15:10:05.145170Z"
+     "iopub.execute_input": "2023-06-16T21:05:35.269070Z",
+     "iopub.status.busy": "2023-06-16T21:05:35.268858Z",
+     "iopub.status.idle": "2023-06-16T21:05:35.283334Z",
+     "shell.execute_reply": "2023-06-16T21:05:35.282987Z"
     },
     "jukit_cell_id": "y1Yv8pXD6x"
    },
@@ -253,10 +268,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:05.147222Z",
-     "iopub.status.busy": "2023-06-16T15:10:05.146938Z",
-     "iopub.status.idle": "2023-06-16T15:10:05.151185Z",
-     "shell.execute_reply": "2023-06-16T15:10:05.150918Z"
+     "iopub.execute_input": "2023-06-16T21:05:35.284648Z",
+     "iopub.status.busy": "2023-06-16T21:05:35.284431Z",
+     "iopub.status.idle": "2023-06-16T21:05:35.288606Z",
+     "shell.execute_reply": "2023-06-16T21:05:35.288267Z"
     },
     "jukit_cell_id": "JA6YJltsLL"
    },
