--- a/3.interpret_models/log_reg_plate_3_3p_cp_renorm_fs_data/feature_importances/interpret.ipynb
+++ b/3.interpret_models/log_reg_plate_3_3p_cp_renorm_fs_data/feature_importances/interpret.ipynb
@@ -23,10 +23,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:06.219407Z",
-     "iopub.status.busy": "2023-06-16T15:10:06.219233Z",
-     "iopub.status.idle": "2023-06-16T15:10:06.713859Z",
-     "shell.execute_reply": "2023-06-16T15:10:06.713537Z"
+     "iopub.execute_input": "2023-06-16T21:05:36.174623Z",
+     "iopub.status.busy": "2023-06-16T21:05:36.174500Z",
+     "iopub.status.idle": "2023-06-16T21:05:36.661447Z",
+     "shell.execute_reply": "2023-06-16T21:05:36.661111Z"
     },
     "jukit_cell_id": "FKd1dIo45E"
    },
@@ -54,10 +54,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:06.715798Z",
-     "iopub.status.busy": "2023-06-16T15:10:06.715425Z",
-     "iopub.status.idle": "2023-06-16T15:10:06.718450Z",
-     "shell.execute_reply": "2023-06-16T15:10:06.718139Z"
+     "iopub.execute_input": "2023-06-16T21:05:36.662955Z",
+     "iopub.status.busy": "2023-06-16T21:05:36.662731Z",
+     "iopub.status.idle": "2023-06-16T21:05:36.665358Z",
+     "shell.execute_reply": "2023-06-16T21:05:36.665106Z"
     },
     "jukit_cell_id": "jRS9z6GLu2"
    },
@@ -95,10 +95,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:06.719992Z",
-     "iopub.status.busy": "2023-06-16T15:10:06.719773Z",
-     "iopub.status.idle": "2023-06-16T15:10:06.721752Z",
-     "shell.execute_reply": "2023-06-16T15:10:06.721469Z"
+     "iopub.execute_input": "2023-06-16T21:05:36.666520Z",
+     "iopub.status.busy": "2023-06-16T21:05:36.666286Z",
+     "iopub.status.idle": "2023-06-16T21:05:36.668029Z",
+     "shell.execute_reply": "2023-06-16T21:05:36.667797Z"
     },
     "jukit_cell_id": "NHsZnAccRS"
    },
@@ -121,10 +121,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:06.723054Z",
-     "iopub.status.busy": "2023-06-16T15:10:06.722836Z",
-     "iopub.status.idle": "2023-06-16T15:10:06.724843Z",
-     "shell.execute_reply": "2023-06-16T15:10:06.724566Z"
+     "iopub.execute_input": "2023-06-16T21:05:36.669158Z",
+     "iopub.status.busy": "2023-06-16T21:05:36.668909Z",
+     "iopub.status.idle": "2023-06-16T21:05:36.670729Z",
+     "shell.execute_reply": "2023-06-16T21:05:36.670486Z"
     },
     "jukit_cell_id": "EBc3nCzByb"
    },
@@ -140,7 +140,7 @@
     "jukit_cell_id": "lxeskUrHu9"
    },
    "source": [
-    "## Create output paths if they don't exist"
+    "## Define Paths"
    ]
   },
   {
@@ -148,10 +148,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:06.726090Z",
-     "iopub.status.busy": "2023-06-16T15:10:06.725888Z",
-     "iopub.status.idle": "2023-06-16T15:10:06.728092Z",
-     "shell.execute_reply": "2023-06-16T15:10:06.727817Z"
+     "iopub.execute_input": "2023-06-16T21:05:36.671871Z",
+     "iopub.status.busy": "2023-06-16T21:05:36.671661Z",
+     "iopub.status.idle": "2023-06-16T21:05:36.673791Z",
+     "shell.execute_reply": "2023-06-16T21:05:36.673560Z"
     },
     "jukit_cell_id": "SrlRn60Pna"
    },
@@ -164,7 +164,10 @@
     "    fig_out_path.mkdir()\n",
     "\n",
     "if not data_path.exists():\n",
-    "    data_path.mkdir()"
+    "    data_path.mkdir()\n",
+    "\n",
+    "overall_feature_output_path = f\"{fig_out_path}/overall_feature_importances.png\"\n",
+    "gene_importances_output_path = f\"{fig_out_path}/gene_feature_importances.png\""
    ]
   },
   {
@@ -181,10 +184,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:06.729362Z",
-     "iopub.status.busy": "2023-06-16T15:10:06.729222Z",
-     "iopub.status.idle": "2023-06-16T15:10:06.735873Z",
-     "shell.execute_reply": "2023-06-16T15:10:06.735606Z"
+     "iopub.execute_input": "2023-06-16T21:05:36.674868Z",
+     "iopub.status.busy": "2023-06-16T21:05:36.674631Z",
+     "iopub.status.idle": "2023-06-16T21:05:36.680901Z",
+     "shell.execute_reply": "2023-06-16T21:05:36.680647Z"
     },
     "jukit_cell_id": "OwoUcHb445"
    },
@@ -212,10 +215,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:06.737179Z",
-     "iopub.status.busy": "2023-06-16T15:10:06.736966Z",
-     "iopub.status.idle": "2023-06-16T15:10:06.743236Z",
-     "shell.execute_reply": "2023-06-16T15:10:06.742963Z"
+     "iopub.execute_input": "2023-06-16T21:05:36.682225Z",
+     "iopub.status.busy": "2023-06-16T21:05:36.681984Z",
+     "iopub.status.idle": "2023-06-16T21:05:36.687981Z",
+     "shell.execute_reply": "2023-06-16T21:05:36.687732Z"
     },
     "jukit_cell_id": "JVPBoMUSAK"
    },
@@ -266,10 +269,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:06.744556Z",
-     "iopub.status.busy": "2023-06-16T15:10:06.744345Z",
-     "iopub.status.idle": "2023-06-16T15:10:07.190497Z",
-     "shell.execute_reply": "2023-06-16T15:10:07.189988Z"
+     "iopub.execute_input": "2023-06-16T21:05:36.689225Z",
+     "iopub.status.busy": "2023-06-16T21:05:36.688986Z",
+     "iopub.status.idle": "2023-06-16T21:05:37.110344Z",
+     "shell.execute_reply": "2023-06-16T21:05:37.110068Z"
     },
     "jukit_cell_id": "Sl3qEmErCO"
    },
@@ -308,7 +311,7 @@
     "plt.title(f\"Best features\")\n",
     "plt.legend(loc=\"lower right\")\n",
     "plt.tight_layout()\n",
-    "plt.savefig(f\"{fig_out_path}/overall_feature_importances.png\")"
+    "plt.savefig(overall_feature_output_path)"
    ]
   },
   {
@@ -325,10 +328,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:07.209403Z",
-     "iopub.status.busy": "2023-06-16T15:10:07.209269Z",
-     "iopub.status.idle": "2023-06-16T15:10:07.848777Z",
-     "shell.execute_reply": "2023-06-16T15:10:07.848380Z"
+     "iopub.execute_input": "2023-06-16T21:05:37.139273Z",
+     "iopub.status.busy": "2023-06-16T21:05:37.138968Z",
+     "iopub.status.idle": "2023-06-16T21:05:37.769872Z",
+     "shell.execute_reply": "2023-06-16T21:05:37.769558Z"
     },
     "jukit_cell_id": "ZYUQ8NrhsZ"
    },
@@ -377,7 +380,7 @@
     "\n",
     "fig.suptitle(f\"Feature importances per gene\")\n",
     "plt.tight_layout()\n",
-    "plt.savefig(f\"{fig_out_path}/gene_feature_importances.png\")"
+    "plt.savefig(gene_importances_output_path)"
    ]
   },
   {
@@ -394,10 +397,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:07.851662Z",
-     "iopub.status.busy": "2023-06-16T15:10:07.851295Z",
-     "iopub.status.idle": "2023-06-16T15:10:10.455841Z",
-     "shell.execute_reply": "2023-06-16T15:10:10.455463Z"
+     "iopub.execute_input": "2023-06-16T21:05:37.773752Z",
+     "iopub.status.busy": "2023-06-16T21:05:37.773617Z",
+     "iopub.status.idle": "2023-06-16T21:05:40.320481Z",
+     "shell.execute_reply": "2023-06-16T21:05:40.320135Z"
     },
     "jukit_cell_id": "oIbGh78xbc"
    },
