--- a/3.interpret_models/log_reg_plate_3_3p_cp_renorm_fs_data/feature_importances/seperate_compartments.ipynb
+++ b/3.interpret_models/log_reg_plate_3_3p_cp_renorm_fs_data/feature_importances/seperate_compartments.ipynb
@@ -14,10 +14,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:11.659678Z",
-     "iopub.status.busy": "2023-06-16T15:10:11.659510Z",
-     "iopub.status.idle": "2023-06-16T15:10:11.667326Z",
-     "shell.execute_reply": "2023-06-16T15:10:11.666899Z"
+     "iopub.execute_input": "2023-06-16T21:05:41.346319Z",
+     "iopub.status.busy": "2023-06-16T21:05:41.346218Z",
+     "iopub.status.idle": "2023-06-16T21:05:41.353654Z",
+     "shell.execute_reply": "2023-06-16T21:05:41.353297Z"
     },
     "jukit_cell_id": "SyZ3qa8iz3"
    },
@@ -45,18 +45,18 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:11.668870Z",
-     "iopub.status.busy": "2023-06-16T15:10:11.668605Z",
-     "iopub.status.idle": "2023-06-16T15:10:11.837858Z",
-     "shell.execute_reply": "2023-06-16T15:10:11.837481Z"
+     "iopub.execute_input": "2023-06-16T21:05:41.355594Z",
+     "iopub.status.busy": "2023-06-16T21:05:41.355207Z",
+     "iopub.status.idle": "2023-06-16T21:05:41.526826Z",
+     "shell.execute_reply": "2023-06-16T21:05:41.526517Z"
     },
     "jukit_cell_id": "FKd1dIo45E"
    },
    "outputs": [],
    "source": [
+    "import itertools\n",
     "import pandas as pd\n",
-    "from pathlib import Path\n",
-    "import itertools"
+    "from pathlib import Path"
    ]
   },
   {
@@ -73,10 +73,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:11.839418Z",
-     "iopub.status.busy": "2023-06-16T15:10:11.839145Z",
-     "iopub.status.idle": "2023-06-16T15:10:11.841717Z",
-     "shell.execute_reply": "2023-06-16T15:10:11.841430Z"
+     "iopub.execute_input": "2023-06-16T21:05:41.528334Z",
+     "iopub.status.busy": "2023-06-16T21:05:41.528052Z",
+     "iopub.status.idle": "2023-06-16T21:05:41.530547Z",
+     "shell.execute_reply": "2023-06-16T21:05:41.530301Z"
     },
     "jukit_cell_id": "zjh0SKYFgl"
    },
@@ -106,7 +106,7 @@
     "jukit_cell_id": "OTkUmqTBVt"
    },
    "source": [
-    "## Create the output path if it doesn't exist"
+    "## Specify Paths"
    ]
   },
   {
@@ -114,10 +114,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:11.842967Z",
-     "iopub.status.busy": "2023-06-16T15:10:11.842749Z",
-     "iopub.status.idle": "2023-06-16T15:10:11.844697Z",
-     "shell.execute_reply": "2023-06-16T15:10:11.844408Z"
+     "iopub.execute_input": "2023-06-16T21:05:41.531673Z",
+     "iopub.status.busy": "2023-06-16T21:05:41.531425Z",
+     "iopub.status.idle": "2023-06-16T21:05:41.533321Z",
+     "shell.execute_reply": "2023-06-16T21:05:41.533076Z"
     },
     "jukit_cell_id": "W8zS6OpdNq"
    },
@@ -128,7 +128,9 @@
     "\n",
     "output_path.mkdir(\n",
     "    parents=True, exist_ok=True\n",
-    ")  # Create the parent directories if they don't exist"
+    ")  # Create the parent directories if they don't exist\n",
+    "\n",
+    "comparments_output_path = output_path / \"feature_compartments.tsv\""
    ]
   },
   {
@@ -145,10 +147,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:11.845811Z",
-     "iopub.status.busy": "2023-06-16T15:10:11.845614Z",
-     "iopub.status.idle": "2023-06-16T15:10:11.848746Z",
-     "shell.execute_reply": "2023-06-16T15:10:11.848456Z"
+     "iopub.execute_input": "2023-06-16T21:05:41.534278Z",
+     "iopub.status.busy": "2023-06-16T21:05:41.534181Z",
+     "iopub.status.idle": "2023-06-16T21:05:41.537185Z",
+     "shell.execute_reply": "2023-06-16T21:05:41.536937Z"
     },
     "jukit_cell_id": "aYwhtTNAgx"
    },
@@ -171,10 +173,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:11.849982Z",
-     "iopub.status.busy": "2023-06-16T15:10:11.849776Z",
-     "iopub.status.idle": "2023-06-16T15:10:11.853087Z",
-     "shell.execute_reply": "2023-06-16T15:10:11.852791Z"
+     "iopub.execute_input": "2023-06-16T21:05:41.538462Z",
+     "iopub.status.busy": "2023-06-16T21:05:41.538205Z",
+     "iopub.status.idle": "2023-06-16T21:05:41.541382Z",
+     "shell.execute_reply": "2023-06-16T21:05:41.541136Z"
     },
     "jukit_cell_id": "wSEsy3OWnz"
    },
@@ -204,10 +206,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:11.854310Z",
-     "iopub.status.busy": "2023-06-16T15:10:11.854106Z",
-     "iopub.status.idle": "2023-06-16T15:10:11.859639Z",
-     "shell.execute_reply": "2023-06-16T15:10:11.859340Z"
+     "iopub.execute_input": "2023-06-16T21:05:41.542548Z",
+     "iopub.status.busy": "2023-06-16T21:05:41.542305Z",
+     "iopub.status.idle": "2023-06-16T21:05:41.547650Z",
+     "shell.execute_reply": "2023-06-16T21:05:41.547398Z"
     },
     "jukit_cell_id": "CQscjFvYen"
    },
@@ -253,10 +255,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:11.860766Z",
-     "iopub.status.busy": "2023-06-16T15:10:11.860566Z",
-     "iopub.status.idle": "2023-06-16T15:10:11.865053Z",
-     "shell.execute_reply": "2023-06-16T15:10:11.864706Z"
+     "iopub.execute_input": "2023-06-16T21:05:41.548747Z",
+     "iopub.status.busy": "2023-06-16T21:05:41.548509Z",
+     "iopub.status.idle": "2023-06-16T21:05:41.552660Z",
+     "shell.execute_reply": "2023-06-16T21:05:41.552397Z"
     },
     "jukit_cell_id": "iTJOXFvhuT"
    },
@@ -265,13 +267,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_7774/1152003864.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_26350/1152003864.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  compartment_data[compartment][\"compartment\"] = len(df) * [compartment]\n",
-      "/tmp/ipykernel_7774/1152003864.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_26350/1152003864.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -313,16 +315,16 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T15:10:11.866370Z",
-     "iopub.status.busy": "2023-06-16T15:10:11.866117Z",
-     "iopub.status.idle": "2023-06-16T15:10:11.870012Z",
-     "shell.execute_reply": "2023-06-16T15:10:11.869653Z"
+     "iopub.execute_input": "2023-06-16T21:05:41.553853Z",
+     "iopub.status.busy": "2023-06-16T21:05:41.553632Z",
+     "iopub.status.idle": "2023-06-16T21:05:41.557401Z",
+     "shell.execute_reply": "2023-06-16T21:05:41.557140Z"
     },
     "jukit_cell_id": "NUwlraBlOz"
    },
    "outputs": [],
    "source": [
-    "concatenated_df.to_csv(output_path / \"feature_compartments.tsv\", sep=\"\\t\", index=False)"
+    "concatenated_df.to_csv(comparments_output_path, sep=\"\\t\", index=False)"
    ]
   }
  ],
