--- a/1.train_models/log_reg_plate_3_3p_cp_renorm_fs_data/train_model.ipynb
+++ b/1.train_models/log_reg_plate_3_3p_cp_renorm_fs_data/train_model.ipynb
@@ -23,10 +23,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T00:08:48.451363Z",
-     "iopub.status.busy": "2023-06-16T00:08:48.451158Z",
-     "iopub.status.idle": "2023-06-16T00:08:48.839740Z",
-     "shell.execute_reply": "2023-06-16T00:08:48.839275Z"
+     "iopub.execute_input": "2023-06-16T21:08:03.895382Z",
+     "iopub.status.busy": "2023-06-16T21:08:03.895281Z",
+     "iopub.status.idle": "2023-06-16T21:08:04.268376Z",
+     "shell.execute_reply": "2023-06-16T21:08:04.267982Z"
     },
     "jukit_cell_id": "FKd1dIo45E"
    },
@@ -56,10 +56,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T00:08:48.841758Z",
-     "iopub.status.busy": "2023-06-16T00:08:48.841403Z",
-     "iopub.status.idle": "2023-06-16T00:08:48.844258Z",
-     "shell.execute_reply": "2023-06-16T00:08:48.843897Z"
+     "iopub.execute_input": "2023-06-16T21:08:04.270100Z",
+     "iopub.status.busy": "2023-06-16T21:08:04.269817Z",
+     "iopub.status.idle": "2023-06-16T21:08:04.272697Z",
+     "shell.execute_reply": "2023-06-16T21:08:04.272317Z"
     },
     "jukit_cell_id": "Iz4nqgONsd"
    },
@@ -97,10 +97,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T00:08:48.845520Z",
-     "iopub.status.busy": "2023-06-16T00:08:48.845280Z",
-     "iopub.status.idle": "2023-06-16T00:08:48.852773Z",
-     "shell.execute_reply": "2023-06-16T00:08:48.852426Z"
+     "iopub.execute_input": "2023-06-16T21:08:04.274338Z",
+     "iopub.status.busy": "2023-06-16T21:08:04.274136Z",
+     "iopub.status.idle": "2023-06-16T21:08:04.276617Z",
+     "shell.execute_reply": "2023-06-16T21:08:04.276251Z"
     },
     "jukit_cell_id": "l1Pgm6LLAj"
    },
@@ -124,10 +124,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T00:08:48.854182Z",
-     "iopub.status.busy": "2023-06-16T00:08:48.853952Z",
-     "iopub.status.idle": "2023-06-16T00:08:48.855986Z",
-     "shell.execute_reply": "2023-06-16T00:08:48.855636Z"
+     "iopub.execute_input": "2023-06-16T21:08:04.278118Z",
+     "iopub.status.busy": "2023-06-16T21:08:04.277916Z",
+     "iopub.status.idle": "2023-06-16T21:08:04.280117Z",
+     "shell.execute_reply": "2023-06-16T21:08:04.279743Z"
     },
     "jukit_cell_id": "EBc3nCzByb"
    },
@@ -149,6 +149,52 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jukit_cell_id": "bs2tOva1oc"
+   },
+   "source": [
+    "## Define paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-16T21:08:04.281646Z",
+     "iopub.status.busy": "2023-06-16T21:08:04.281447Z",
+     "iopub.status.idle": "2023-06-16T21:08:04.284199Z",
+     "shell.execute_reply": "2023-06-16T21:08:04.283819Z"
+    },
+    "jukit_cell_id": "nWznXQ9jDn"
+   },
+   "outputs": [],
+   "source": [
+    "data_path = Path(\"data\")\n",
+    "\n",
+    "data_path.mkdir(\n",
+    "    parents=True, exist_ok=True\n",
+    ")  # Create the parent directories if they don't exist\n",
+    "\n",
+    "filename3 = \"Plate_3_sc_norm_fs.parquet\"\n",
+    "filename3p = \"Plate_3_prime_sc_norm_fs.parquet\"\n",
+    "plate_path = Path(\n",
+    "    f\"{root_dir}/nf1_painting_repo/3.processing_features/data/feature_selected_data\"\n",
+    ")\n",
+    "\n",
+    "lr_output_path = data_path / \"lr_model.joblib\"\n",
+    "\n",
+    "le_output_path = data_path / \"label_encoder.joblib\"\n",
+    "\n",
+    "testdf_output_path = data_path / \"testdf.joblib\"\n",
+    "\n",
+    "path3 = plate_path / filename3\n",
+    "\n",
+    "path3p = plate_path / filename3p"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "jukit_cell_id": "FfzbDg67qj"
    },
    "source": [
@@ -157,28 +203,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T00:08:48.857249Z",
-     "iopub.status.busy": "2023-06-16T00:08:48.857022Z",
-     "iopub.status.idle": "2023-06-16T00:08:49.372889Z",
-     "shell.execute_reply": "2023-06-16T00:08:49.372262Z"
+     "iopub.execute_input": "2023-06-16T21:08:04.285808Z",
+     "iopub.status.busy": "2023-06-16T21:08:04.285590Z",
+     "iopub.status.idle": "2023-06-16T21:08:04.464615Z",
+     "shell.execute_reply": "2023-06-16T21:08:04.464092Z"
     },
     "jukit_cell_id": "EYGHUOxuTt"
    },
    "outputs": [],
    "source": [
-    "filename3 = \"Plate_3_sc_norm_fs.parquet\"\n",
-    "filename3p = \"Plate_3_prime_sc_norm_fs.parquet\"\n",
-    "plate_path = Path(\n",
-    "    f\"{root_dir}/nf1_painting_repo/3.processing_features/data/feature_selected_data\"\n",
-    ")\n",
-    "\n",
-    "path3 = plate_path / filename3\n",
-    "\n",
-    "path3p = plate_path / filename3p\n",
-    "\n",
     "# Creates an object for accessing the plate 3 normalized data using the path of the data\n",
     "po3 = ppu.Preprocess_data(path=path3)\n",
     "\n",
@@ -202,13 +238,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T00:08:49.375792Z",
-     "iopub.status.busy": "2023-06-16T00:08:49.375267Z",
-     "iopub.status.idle": "2023-06-16T00:08:50.543733Z",
-     "shell.execute_reply": "2023-06-16T00:08:50.543385Z"
+     "iopub.execute_input": "2023-06-16T21:08:04.467217Z",
+     "iopub.status.busy": "2023-06-16T21:08:04.467009Z",
+     "iopub.status.idle": "2023-06-16T21:08:04.853948Z",
+     "shell.execute_reply": "2023-06-16T21:08:04.853569Z"
     },
     "jukit_cell_id": "V0yTf41uiR"
    },
@@ -230,8 +266,11 @@
     "# Creates an object for accessing the plate 3 prime normalized data using the path of the data\n",
     "po3p = ppu.Preprocess_data(path=path3p)\n",
     "\n",
-    "plate3df = po3.df  # Returns the dataframe generated by the csv\n",
-    "plate3pdf = po3p.df  # Returns the dataframe generated by the csv"
+    "# Returns the dataframe generated by the csv\n",
+    "plate3df = po3.df\n",
+    "\n",
+    "# Returns the dataframe generated by the csv\n",
+    "plate3pdf = po3p.df"
    ]
   },
   {
@@ -254,13 +293,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T00:08:50.546160Z",
-     "iopub.status.busy": "2023-06-16T00:08:50.545986Z",
-     "iopub.status.idle": "2023-06-16T00:08:50.598217Z",
-     "shell.execute_reply": "2023-06-16T00:08:50.597864Z"
+     "iopub.execute_input": "2023-06-16T21:08:04.855752Z",
+     "iopub.status.busy": "2023-06-16T21:08:04.855610Z",
+     "iopub.status.idle": "2023-06-16T21:08:04.905974Z",
+     "shell.execute_reply": "2023-06-16T21:08:04.905608Z"
     },
     "jukit_cell_id": "bCflTponOs"
    },
@@ -288,13 +327,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T00:08:50.599919Z",
-     "iopub.status.busy": "2023-06-16T00:08:50.599790Z",
-     "iopub.status.idle": "2023-06-16T00:08:50.884559Z",
-     "shell.execute_reply": "2023-06-16T00:08:50.884163Z"
+     "iopub.execute_input": "2023-06-16T21:08:04.907558Z",
+     "iopub.status.busy": "2023-06-16T21:08:04.907422Z",
+     "iopub.status.idle": "2023-06-16T21:08:05.210497Z",
+     "shell.execute_reply": "2023-06-16T21:08:05.210082Z"
     },
     "jukit_cell_id": "6tv8VxofP6"
    },
@@ -324,13 +363,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T00:08:50.886587Z",
-     "iopub.status.busy": "2023-06-16T00:08:50.886432Z",
-     "iopub.status.idle": "2023-06-16T00:08:50.888731Z",
-     "shell.execute_reply": "2023-06-16T00:08:50.888469Z"
+     "iopub.execute_input": "2023-06-16T21:08:05.212381Z",
+     "iopub.status.busy": "2023-06-16T21:08:05.212245Z",
+     "iopub.status.idle": "2023-06-16T21:08:05.214369Z",
+     "shell.execute_reply": "2023-06-16T21:08:05.214099Z"
     },
     "jukit_cell_id": "jH432rS91v"
    },
@@ -356,27 +395,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T00:08:50.890453Z",
-     "iopub.status.busy": "2023-06-16T00:08:50.890231Z",
-     "iopub.status.idle": "2023-06-16T00:08:51.802900Z",
-     "shell.execute_reply": "2023-06-16T00:08:51.802501Z"
+     "iopub.execute_input": "2023-06-16T21:08:05.215787Z",
+     "iopub.status.busy": "2023-06-16T21:08:05.215595Z",
+     "iopub.status.idle": "2023-06-16T21:08:06.185173Z",
+     "shell.execute_reply": "2023-06-16T21:08:06.184743Z"
     },
     "jukit_cell_id": "6wLIrXfTzh"
    },
    "outputs": [],
    "source": [
+    "# Find the cardinality of the smallest class\n",
     "smallest_gene = platedf[target_column].value_counts().min()\n",
     "platedata = pd.DataFrame()\n",
     "\n",
     "for gene in platedf[target_column].unique():\n",
+    "    # Determine what fraction of each gene's dataset would be needed for to have the same number of samples per geneotype\n",
     "    df = platedf.loc[platedf[\"Metadata_genotype\"] == gene]\n",
     "    df_frac = smallest_gene / len(df)\n",
+    "\n",
+    "    # Use the fraction above to stratify sample by well\n",
     "    stratwell = df.groupby(stratify_column, group_keys=False).apply(\n",
     "        lambda x: x.sample(frac=df_frac, random_state=rnd_val)\n",
     "    )\n",
+    "\n",
+    "    # Store these stratified samples in a dataframe\n",
     "    platedata = pd.concat([platedata, stratwell], axis=\"rows\")"
    ]
   },
@@ -391,13 +436,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T00:08:51.804874Z",
-     "iopub.status.busy": "2023-06-16T00:08:51.804717Z",
-     "iopub.status.idle": "2023-06-16T00:08:51.954399Z",
-     "shell.execute_reply": "2023-06-16T00:08:51.953999Z"
+     "iopub.execute_input": "2023-06-16T21:08:06.187102Z",
+     "iopub.status.busy": "2023-06-16T21:08:06.186939Z",
+     "iopub.status.idle": "2023-06-16T21:08:06.338014Z",
+     "shell.execute_reply": "2023-06-16T21:08:06.337588Z"
     },
     "jukit_cell_id": "VNkswJFWjR"
    },
@@ -423,13 +468,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T00:08:51.956082Z",
-     "iopub.status.busy": "2023-06-16T00:08:51.955964Z",
-     "iopub.status.idle": "2023-06-16T00:08:51.961379Z",
-     "shell.execute_reply": "2023-06-16T00:08:51.961083Z"
+     "iopub.execute_input": "2023-06-16T21:08:06.339917Z",
+     "iopub.status.busy": "2023-06-16T21:08:06.339751Z",
+     "iopub.status.idle": "2023-06-16T21:08:06.345597Z",
+     "shell.execute_reply": "2023-06-16T21:08:06.345300Z"
     },
     "jukit_cell_id": "wqT9BUqx7w"
    },
@@ -438,17 +483,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4858/4215398058.py:2: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/tmp/ipykernel_26868/4215398058.py:2: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  testdf[\"label\"] = le.fit_transform(testdf[target_column].values)\n",
-      "/tmp/ipykernel_4858/4215398058.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_26868/4215398058.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  testdf[\"label\"] = le.fit_transform(testdf[target_column].values)\n",
-      "/tmp/ipykernel_4858/4215398058.py:3: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/tmp/ipykernel_26868/4215398058.py:3: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  traindf[\"label\"] = le.transform(traindf[target_column].values)\n",
-      "/tmp/ipykernel_4858/4215398058.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_26868/4215398058.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -474,13 +519,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T00:08:51.996139Z",
-     "iopub.status.busy": "2023-06-16T00:08:51.995998Z",
-     "iopub.status.idle": "2023-06-16T00:08:52.040994Z",
-     "shell.execute_reply": "2023-06-16T00:08:52.040724Z"
+     "iopub.execute_input": "2023-06-16T21:08:06.373322Z",
+     "iopub.status.busy": "2023-06-16T21:08:06.373176Z",
+     "iopub.status.idle": "2023-06-16T21:08:06.421570Z",
+     "shell.execute_reply": "2023-06-16T21:08:06.421217Z"
     },
     "jukit_cell_id": "UFK0jsur96"
    },
@@ -501,13 +546,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T00:08:52.042820Z",
-     "iopub.status.busy": "2023-06-16T00:08:52.042684Z",
-     "iopub.status.idle": "2023-06-16T00:09:23.125169Z",
-     "shell.execute_reply": "2023-06-16T00:09:23.124638Z"
+     "iopub.execute_input": "2023-06-16T21:08:06.423389Z",
+     "iopub.status.busy": "2023-06-16T21:08:06.423276Z",
+     "iopub.status.idle": "2023-06-16T21:08:37.160279Z",
+     "shell.execute_reply": "2023-06-16T21:08:37.159807Z"
     },
     "jukit_cell_id": "4WFLztISAE"
    },
@@ -519,7 +564,7 @@
        "                   solver='sag')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,13 +587,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T00:09:23.127296Z",
-     "iopub.status.busy": "2023-06-16T00:09:23.127084Z",
-     "iopub.status.idle": "2023-06-16T00:09:23.132567Z",
-     "shell.execute_reply": "2023-06-16T00:09:23.132100Z"
+     "iopub.execute_input": "2023-06-16T21:08:37.162185Z",
+     "iopub.status.busy": "2023-06-16T21:08:37.162021Z",
+     "iopub.status.idle": "2023-06-16T21:08:37.165989Z",
+     "shell.execute_reply": "2023-06-16T21:08:37.165591Z"
     },
     "jukit_cell_id": "xGf9mf7lUA"
    },
@@ -559,19 +604,13 @@
        "['data/lr_model.joblib']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_path = Path(\"data\")\n",
-    "\n",
-    "data_path.mkdir(\n",
-    "    parents=True, exist_ok=True\n",
-    ")  # Create the parent directories if they don't exist\n",
-    "\n",
-    "dump(lr, data_path / \"lr_model.joblib\")"
+    "dump(lr, lr_output_path)"
    ]
   },
   {
@@ -585,13 +624,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T00:09:23.134568Z",
-     "iopub.status.busy": "2023-06-16T00:09:23.134199Z",
-     "iopub.status.idle": "2023-06-16T00:09:23.215877Z",
-     "shell.execute_reply": "2023-06-16T00:09:23.215364Z"
+     "iopub.execute_input": "2023-06-16T21:08:37.168152Z",
+     "iopub.status.busy": "2023-06-16T21:08:37.167807Z",
+     "iopub.status.idle": "2023-06-16T21:08:37.255871Z",
+     "shell.execute_reply": "2023-06-16T21:08:37.255334Z"
     },
     "jukit_cell_id": "sgPsexjO8l"
    },
@@ -602,14 +641,14 @@
        "['data/label_encoder.joblib']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dump(testdf, data_path / \"testdf.joblib\")\n",
-    "dump(le, data_path / \"label_encoder.joblib\")"
+    "dump(testdf, testdf_output_path)\n",
+    "dump(le, le_output_path)"
    ]
   }
  ],
