Calculated and saved the adjusted significance threshold

--- a/1.train_models/linear_reg_plate_1_2_norm_data/train_model.ipynb
+++ b/1.train_models/linear_reg_plate_1_2_norm_data/train_model.ipynb
@@ -17,10 +17,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:45:55.564753Z",
-     "iopub.status.busy": "2023-06-16T19:45:55.564652Z",
-     "iopub.status.idle": "2023-06-16T19:45:55.953193Z",
-     "shell.execute_reply": "2023-06-16T19:45:55.952874Z"
+     "iopub.execute_input": "2023-06-16T22:18:53.878090Z",
+     "iopub.status.busy": "2023-06-16T22:18:53.877993Z",
+     "iopub.status.idle": "2023-06-16T22:18:54.265267Z",
+     "shell.execute_reply": "2023-06-16T22:18:54.264836Z"
     },
     "jukit_cell_id": "Lq6i6b1L6q"
    },
@@ -50,10 +50,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:45:55.955241Z",
-     "iopub.status.busy": "2023-06-16T19:45:55.954829Z",
-     "iopub.status.idle": "2023-06-16T19:45:55.957511Z",
-     "shell.execute_reply": "2023-06-16T19:45:55.957252Z"
+     "iopub.execute_input": "2023-06-16T22:18:54.266824Z",
+     "iopub.status.busy": "2023-06-16T22:18:54.266517Z",
+     "iopub.status.idle": "2023-06-16T22:18:54.269553Z",
+     "shell.execute_reply": "2023-06-16T22:18:54.269141Z"
     },
     "jukit_cell_id": "261w9QY97P"
    },
@@ -82,10 +82,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:45:55.958648Z",
-     "iopub.status.busy": "2023-06-16T19:45:55.958402Z",
-     "iopub.status.idle": "2023-06-16T19:45:55.960436Z",
-     "shell.execute_reply": "2023-06-16T19:45:55.960204Z"
+     "iopub.execute_input": "2023-06-16T22:18:54.271200Z",
+     "iopub.status.busy": "2023-06-16T22:18:54.270996Z",
+     "iopub.status.idle": "2023-06-16T22:18:54.273478Z",
+     "shell.execute_reply": "2023-06-16T22:18:54.273099Z"
     },
     "jukit_cell_id": "jG7YhMVm79"
    },
@@ -109,10 +109,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:45:55.961652Z",
-     "iopub.status.busy": "2023-06-16T19:45:55.961397Z",
-     "iopub.status.idle": "2023-06-16T19:45:55.963492Z",
-     "shell.execute_reply": "2023-06-16T19:45:55.963236Z"
+     "iopub.execute_input": "2023-06-16T22:18:54.275159Z",
+     "iopub.status.busy": "2023-06-16T22:18:54.274898Z",
+     "iopub.status.idle": "2023-06-16T22:18:54.277364Z",
+     "shell.execute_reply": "2023-06-16T22:18:54.276972Z"
     },
     "jukit_cell_id": "EwwGYfhdHG"
    },
@@ -145,10 +145,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:45:55.964494Z",
-     "iopub.status.busy": "2023-06-16T19:45:55.964397Z",
-     "iopub.status.idle": "2023-06-16T19:45:56.084659Z",
-     "shell.execute_reply": "2023-06-16T19:45:56.084294Z"
+     "iopub.execute_input": "2023-06-16T22:18:54.279081Z",
+     "iopub.status.busy": "2023-06-16T22:18:54.278820Z",
+     "iopub.status.idle": "2023-06-16T22:18:54.394842Z",
+     "shell.execute_reply": "2023-06-16T22:18:54.394348Z"
     },
     "jukit_cell_id": "pKNMm62FVl"
    },
@@ -192,10 +192,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:45:56.086467Z",
-     "iopub.status.busy": "2023-06-16T19:45:56.086260Z",
-     "iopub.status.idle": "2023-06-16T19:45:56.097512Z",
-     "shell.execute_reply": "2023-06-16T19:45:56.097238Z"
+     "iopub.execute_input": "2023-06-16T22:18:54.396880Z",
+     "iopub.status.busy": "2023-06-16T22:18:54.396712Z",
+     "iopub.status.idle": "2023-06-16T22:18:54.408032Z",
+     "shell.execute_reply": "2023-06-16T22:18:54.407644Z"
     },
     "jukit_cell_id": "YeIyN5E3xy"
    },
@@ -237,10 +237,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:45:56.098735Z",
-     "iopub.status.busy": "2023-06-16T19:45:56.098624Z",
-     "iopub.status.idle": "2023-06-16T19:45:57.555187Z",
-     "shell.execute_reply": "2023-06-16T19:45:57.554789Z"
+     "iopub.execute_input": "2023-06-16T22:18:54.409714Z",
+     "iopub.status.busy": "2023-06-16T22:18:54.409419Z",
+     "iopub.status.idle": "2023-06-16T22:18:55.871159Z",
+     "shell.execute_reply": "2023-06-16T22:18:55.870646Z"
     },
     "jukit_cell_id": "4gra1XWKi3"
    },
@@ -296,10 +296,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:45:57.557252Z",
-     "iopub.status.busy": "2023-06-16T19:45:57.557045Z",
-     "iopub.status.idle": "2023-06-16T19:45:57.560382Z",
-     "shell.execute_reply": "2023-06-16T19:45:57.560102Z"
+     "iopub.execute_input": "2023-06-16T22:18:55.873006Z",
+     "iopub.status.busy": "2023-06-16T22:18:55.872886Z",
+     "iopub.status.idle": "2023-06-16T22:18:55.876392Z",
+     "shell.execute_reply": "2023-06-16T22:18:55.875980Z"
     },
     "jukit_cell_id": "DnyVti231X"
    },
@@ -334,21 +334,26 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:45:57.561901Z",
-     "iopub.status.busy": "2023-06-16T19:45:57.561632Z",
-     "iopub.status.idle": "2023-06-16T19:45:57.564452Z",
-     "shell.execute_reply": "2023-06-16T19:45:57.564192Z"
+     "iopub.execute_input": "2023-06-16T22:18:55.878283Z",
+     "iopub.status.busy": "2023-06-16T22:18:55.877989Z",
+     "iopub.status.idle": "2023-06-16T22:18:55.881660Z",
+     "shell.execute_reply": "2023-06-16T22:18:55.881300Z"
     },
     "jukit_cell_id": "jz9zRzmXxt"
    },
    "outputs": [],
    "source": [
     "# Benjamini-Hochberg procedure has a greater power than Bonferroni, and still controls for FDR\n",
-    "_, corrected_pvalues, _, _ = multipletests(\n",
-    "    lm_results[\"p_value\"].tolist(), method=\"fdr_bh\"\n",
+    "# Here, alpha is the FDR level\n",
+    "rejected, corrected_pvalues, _, _ = multipletests(\n",
+    "    lm_results[\"p_value\"].tolist(), method=\"fdr_bh\", alpha=0.05\n",
     ")\n",
     "\n",
+    "# Store the correcte p values\n",
     "lm_results[\"corrected_p_value\"] = corrected_pvalues\n",
+    "\n",
+    "# Store the critical threshold value in one column\n",
+    "lm_results[\"critical_threshold\"] = [max(corrected_pvalues[rejected])] * len(lm_results)\n",
     "\n",
     "# Taking the negative log of the corrected p values\n",
     "lm_results[\"neg_log_p\"] = -np.log10(lm_results[\"corrected_p_value\"])"
@@ -368,10 +373,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-16T19:45:57.566275Z",
-     "iopub.status.busy": "2023-06-16T19:45:57.566170Z",
-     "iopub.status.idle": "2023-06-16T19:45:57.576016Z",
-     "shell.execute_reply": "2023-06-16T19:45:57.575751Z"
+     "iopub.execute_input": "2023-06-16T22:18:55.883704Z",
+     "iopub.status.busy": "2023-06-16T22:18:55.883388Z",
+     "iopub.status.idle": "2023-06-16T22:18:55.894601Z",
+     "shell.execute_reply": "2023-06-16T22:18:55.894241Z"
     },
     "jukit_cell_id": "YOJIOVVq1O"
    },
